# lambda-snake

./: README.md  lambda-snake.cabal
src/: Main.hs
src/Snake/: Direction.hs  Position.hs
