cabal-version:       >=1.10
name:                lambda-snake
version:             0.1
--license-file:        LICENSE
author:              Jan Synacek
maintainer:          jan.synacek@gmail.com
build-type:          Simple
--extra-source-files:  CHANGELOG.md

executable lambda-snake
  default-language: Haskell2010
  build-depends:    base >=4.13 && <4.14
                  , brick >= 0.55
                  , microlens >= 0.4.11.2
                  , microlens-th
                  , mtl
                  , random
                  , vty >= 5.30
                  , stm
                  , time
                  , transformers
  hs-source-dirs: src
  main-is:        Main.hs
  other-modules:  Snake.Direction, Snake.Position
  ghc-options:    -threaded
