cabal-version:       >=1.10
name:                lambda-snake
version:             0.1
--license-file:        LICENSE
author:              Jan Synacek
maintainer:          jan.synacek@gmail.com
build-type:          Simple
--extra-source-files:  CHANGELOG.md

executable lambda-snake
  default-language: Haskell2010
  build-depends:    base
                  , brick <1.0
                  , microlens
                  , microlens-th
                  , mtl
                  , random
                  , vty
                  , stm
                  , time
                  , transformers
  hs-source-dirs: src
  main-is:        Main.hs
  other-modules:  Snake.Direction, Snake.Position
  ghc-options:    -threaded
